crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_at_the_smallest_usable_size.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 60, 20)"
---
 +                                                          
┏ Explorer ━━━━┓│┌ Preview ────────────────────────────────┐
┃▾ mock        ┃││                                         │
┃  ▸ public    ┃││                                         │
┃  ▸ analytics ┃││                                         │
┃  ▸ restrict… ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┃              ┃││                                         │
┗━━━━━━━━━━━━━━┛│└─────────────────────────────────────────┘
 Shift (or Option) + drag to select text                    

── styles ──
000111111111111111111111111111111111111111111111111111111111
233333333332222244555555555444444444444444444444444444444444
255666666666666244666666666666666666666666666666666666666664
266556666666666244666666666666666666666666666666666666666664
266556666666666244666666666666666666666666666666666666666664
266556666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
266666666666666244666666666666666666666666666666666666666664
222222222222222244444444444444444444444444444444444444444444
444444444444444444444444444444444444444446666666666666666666
0 = fg=Gray bg=Black
1 = fg=Reset bg=Black
2 = fg=Cyan bg=Reset
3 = fg=Cyan bg=Reset BOLD
4 = fg=DarkGray bg=Reset
5 = fg=Gray bg=Reset
6 = fg=Reset bg=Reset
