crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_before_anything_is_open.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 100, 30)"
---
 +                                                                                                  
┏ Explorer ━━━━━━━━━━━━━━━━┓│┌ Preview ────────────────────────────────────────────────────────────┐
┃▾ mock                    ┃││                                                                     │
┃  ▸ public                ┃││                                                                     │
┃  ▸ analytics             ┃││                                                                     │
┃  ▸ restricted            ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛│└─────────────────────────────────────────────────────────────────────┘
 Shift (or Option) + drag to select text                                                            

── styles ──
0001111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
2333333333322222222222222222445555555554444444444444444444444444444444444444444444444444444444444444
2556666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2665566666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2665566666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2665566666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2666666666666666666666666662446666666666666666666666666666666666666666666666666666666666666666666664
2222222222222222222222222222444444444444444444444444444444444444444444444444444444444444444444444444
4444444444444444444444444444444444444444466666666666666666666666666666666666666666666666666666666666
0 = fg=Gray bg=Black
1 = fg=Reset bg=Black
2 = fg=Cyan bg=Reset
3 = fg=Cyan bg=Reset BOLD
4 = fg=DarkGray bg=Reset
5 = fg=Gray bg=Reset
6 = fg=Reset bg=Reset
