crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_below_the_smallest_usable_size.snap
---
source: crates/sqlake-tui/src/run.rs
assertion_line: 728
expression: "screen(&snap, &mut ui, 40, 10)"
---
terminal is 40×10; sqlake needs 60×20
