crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_with_a_definition_open.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 100, 20)"
---
 users: def ×  +                                                                                    
┏ Explorer ━━━━━━━━━━━━━━━━┓│┌ users: def ─────────────────────────────────────────────────────────┐
┃▾ mock                    ┃││ Columns        table · rows: 50 · the mock's users                  │
┃  ▸ public                ┃││                column       type        null     default            │
┃  ▸ analytics             ┃││                id           int8        not null nextval('mock_seq… │
┃  ▸ restricted            ┃││                email        text        not null ∅                  │
┃                          ┃││                display_name text        not null ∅                  │
┃                          ┃││                active       bool        not null ∅                  │
┃                          ┃││                score        numeric     not null ∅                  │
┃                          ┃││                created_at   timestamptz not null ∅                  │
┃                          ┃││                last_seen    timestamp            ∅                  │
┃                          ┃││                notes        text                 ∅                  │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛│└─────────────────────────────────────────────────────────────────────┘
 Shift (or Option) + drag to select text                                                            

── styles ──
0000000000000011122222222222222222222222222222222222222222222222222222222222222222222222222222222222
3444444444433333333333333333556666666666665555555555555555555555555555555555555555555555555555555555
3667777777777777777777777773550000000007777777555555555555555555555555555555555555555555555555555555
3776677777777777777777777773557777777777777777888888888888288888888888288888888288888888888888888875
3776677777777777777777777773557777777777777777999999999999777777777777777777777777777777777777777775
37766777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
37777777777777777777777777735577777777777777777777777777777777777777777777777777aaaaaaaaaaaaaaaaaa75
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3333333333333333333333333333555555555555555555555555555555555555555555555555555555555555555555555555
5555555555555555555555555555555555555555577777777777777777777777777777777777777777777777777777777777
0 = fg=Black bg=Cyan BOLD
1 = fg=Gray bg=Black
2 = fg=Reset bg=Black
3 = fg=Cyan bg=Reset
4 = fg=Cyan bg=Reset BOLD
5 = fg=DarkGray bg=Reset
6 = fg=Gray bg=Reset
7 = fg=Reset bg=Reset
8 = fg=DarkGray bg=Black
9 = fg=Reset bg=DarkGray BOLD
a = fg=DarkGray bg=Reset DIM
