crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_with_a_query_refused_on_its_second_line.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 100, 20)"
---
 SQL#1 ×  +                                                                                         
┏ Explorer ━━━━━━━━━━━━━━━━┓│┌ SQL#1 ──────────────────────────────────────────────────────────────┐
┃▾ mock                    ┃││select                                                               │
┃  ▸ public                ┃││  sql_that_is_wrong                                                  │
┃  ▸ analytics             ┃││from public.users                                                    │
┃  ▸ restricted            ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛│└─────────────────────────────────────────────────────────────────────┘
 Run  Shift (or Option) + drag to select text                                                       

── styles ──
0000000001112222222222222222222222222222222222222222222222222222222222222222222222222222222222222222
3444444444433333333333333333556666666555555555555555555555555555555555555555555555555555555555555555
3667777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3776677777777777777777777773558888888888888888888777777777777777777777777777777777777777777777777775
3776677777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3776677777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3777777777777777777777777773557777777777777777777777777777777777777777777777777777777777777777777775
3333333333333333333333333333555555555555555555555555555555555555555555555555555555555555555555555555
9999955555555555555555555555555555555555555555777777777777777777777777777777777777777777777777777777
0 = fg=Black bg=Cyan BOLD
1 = fg=Gray bg=Black
2 = fg=Reset bg=Black
3 = fg=Cyan bg=Reset
4 = fg=Cyan bg=Reset BOLD
5 = fg=DarkGray bg=Reset
6 = fg=Gray bg=Reset
7 = fg=Reset bg=Reset
8 = fg=Red bg=Reset BOLD
9 = fg=Black bg=Green BOLD
