crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_with_a_query_result_in_a_sql_tab.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 100, 20)"
---
 SQL#1 ×  +                                                                                         
┏ Explorer ━━━━━━━━━━━━━━━━┓│┌ SQL#1 ──────────────────────────────────────────────────────────────┐
┃▾ mock                    ┃││id  email              display_name active score created_at          │
┃  ▸ public                ┃││  1 user01@example.com Grace        true    7.13 2026-01-02 10:04:0…█│
┃  ▸ analytics             ┃││  2 user02@example.com Alan         true   14.26 2026-01-02 10:08:0…█│
┃  ▸ restricted            ┃││  3 user03@example.com Barbara      false  21.39 2026-01-02 10:12:0…█│
┃                          ┃││  4 user04@example.com Edsger       true   28.52 2026-01-02 10:16:0…█│
┃                          ┃││  5 user05@example.com Ada          true   35.65 2026-01-02 10:20:0…││
┃                          ┃││  6 user06@example.com Grace        false  42.78 2026-01-02 10:24:0…││
┃                          ┃││  7 user07@example.com Alan         true   49.91 2026-01-02 10:28:0…││
┃                          ┃││  8 user08@example.com Barbara      true   56.04 2026-01-02 10:32:0…││
┃                          ┃││  9 user09@example.com Edsger       false  63.17 2026-01-02 10:36:0…││
┃                          ┃││ 10 user10@example.com Ada          true   70.30 2026-01-02 10:40:0…││
┃                          ┃││ 11 user11@example.com Grace        true   77.43 2026-01-02 10:44:0…││
┃                          ┃││ 12 user12@example.com Alan         false  84.56 2026-01-02 10:48:0…││
┃                          ┃││ 13 user13@example.com Barbara      true   91.69 2026-01-02 10:52:0…││
┃                          ┃││ 14 user14@example.com Edsger       true   98.82 2026-01-02 10:56:0…││
┃                          ┃││ 15 user15@example.com Ada          false   5.95 2026-01-02 11:00:0…││
┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛│└─────────────────────────────────────────────────────────────────────┘
 Run  Shift (or Option) + drag to select text                                                       

── styles ──
0000000001112222222222222222222222222222222222222222222222222222222222222222222222222222222222222222
3444444444433333333333333333556666666555555555555555555555555555555555555555555555555555555555555555
3667777777777777777777777773558882888888888888888888288888888888828888882888882888888888888888888875
3776677777777777777777777773559997777777777777777777777777777777777777777aaaaa7777777777777777777765
377667777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777765
377667777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777765
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777765
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
377777777777777777777777777355aaa7777777777777777777777777777777777777777aaaaa7777777777777777777755
3333333333333333333333333333555555555555555555555555555555555555555555555555555555555555555555555555
bbbbb55555555555555555555555555555555555555555777777777777777777777777777777777777777777777777777777
0 = fg=Black bg=Cyan BOLD
1 = fg=Gray bg=Black
2 = fg=Reset bg=Black
3 = fg=Cyan bg=Reset
4 = fg=Cyan bg=Reset BOLD
5 = fg=DarkGray bg=Reset
6 = fg=Gray bg=Reset
7 = fg=Reset bg=Reset
8 = fg=DarkGray bg=Black
9 = fg=LightBlue bg=DarkGray BOLD
a = fg=LightBlue bg=Reset
b = fg=Black bg=Green BOLD
