crates/sqlake-tui/src/snapshots/sqlake_tui__run__tests__screen_with_a_sql_tab_beside_a_preview.snap
---
source: crates/sqlake-tui/src/run.rs
expression: "screen(&snap, &mut ui, 100, 20)"
---
 users ×  SQL#1 ×  +                                                                                
┏ Explorer ━━━━━━━━━━━━━━━━┓│┌ SQL#1 ──────────────────────────────────────────────────────────────┐
┃▾ mock                    ┃││Nothing to run yet.                                                  │
┃  ▸ public                ┃││                                                                     │
┃  ▸ analytics             ┃││                                                                     │
┃  ▸ restricted            ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┃                          ┃││                                                                     │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛│└─────────────────────────────────────────────────────────────────────┘
 Shift (or Option) + drag to select text                                                            

── styles ──
0000000001111111110002222222222222222222222222222222222222222222222222222222222222222222222222222222
3444444444433333333333333333556666666555555555555555555555555555555555555555555555555555555555555555
3667777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3776677777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3776677777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3776677777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3777777777777777777777777773558888888888888888888888888888888888888888888888888888888888888888888885
3333333333333333333333333333555555555555555555555555555555555555555555555555555555555555555555555555
5555555555555555555555555555555555555555577777777777777777777777777777777777777777777777777777777777
0 = fg=Gray bg=Black
1 = fg=Black bg=Cyan BOLD
2 = fg=Reset bg=Black
3 = fg=Cyan bg=Reset
4 = fg=Cyan bg=Reset BOLD
5 = fg=DarkGray bg=Reset
6 = fg=Gray bg=Reset
7 = fg=Reset bg=Reset
8 = fg=DarkGray bg=Reset DIM
